tests/NormalTests/paczka1/fuzzy1/26066852.err
Error in line 2: HdvVYR A60 85,25
Error in line 7: rwJ S828 61,9
Error in line 9: rwJ A60 88,7
Error in line 10: 2STv A69 34,9
Error in line 8: 67T A69 58,3
